tests/tests_p1/pass/prof/14ok.min
program
	number x := 12
start
	x := 21;
end
