tests/tests_p1/fail/prof/14novar.min
program
	const number x := 12
start
	x := 21;
end
